# lidtgbot

./: LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/lidtgbot/: main.py  writequestions.py
src/lidtgbot/database/: firestore_client.py  question.py  translation.py  user.py
src/lidtgbot/handlers/: decorators.py  federal_handler.py  start_handler.py
src/lidtgbot/keyboards/: federal.py
src/lidtgbot/models/: federal_state.py  question.py  translation.py  user.py
